fix: form element's focus color now visible on all components

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -57,7 +57,7 @@
   --secondary-foreground: oklch(0.35 0.005 285.823);
   --muted: oklch(0.967 0.001 286.375);
   --muted-foreground: oklch(0.552 0.016 285.938);
-  --accent: oklch(0.967 0.001 286.375);
+  --accent: var(--color-neutral-200);
   --accent-foreground: oklch(0.35 0.005 285.823);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.92 0.004 286.32);
@@ -72,7 +72,7 @@
   --sidebar-foreground: oklch(0.35 0.005 285.823);
   --sidebar-primary: var(--color-primary-200);
   --sidebar-primary-foreground: oklch(0.98 0 0);
-  --sidebar-accent: oklch(0.967 0.001 286.375);
+  --sidebar-accent: var(--color-neutral-200);
   --sidebar-accent-foreground: oklch(0.35 0.005 285.823);
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.66 0.01 251.23);
@@ -113,7 +113,7 @@
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.274 0.006 286.033);
   --muted-foreground: oklch(0.705 0.015 286.067);
-  --accent: oklch(0.274 0.006 286.033);
+  --accent: var(--color-neutral-400);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
@@ -128,7 +128,7 @@
   --sidebar-foreground: oklch(0.985 0 0);
   --sidebar-primary: var(--color-primary-300);
   --sidebar-primary-foreground: oklch(0.98 0 0);
-  --sidebar-accent: oklch(0.274 0.006 286.033);
+  --sidebar-accent: var(--color-neutral-400);
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.47 0.01 251.23);
